Fix widget margins and display on mobile
The horizontal bar is not supposed to be displayed on mobile. Widget
margins only need to apply if one of the bars is displayed.

--- a/app/assets/stylesheets/pageflow/progress_navigation_bar/cross_dependant_styles.css.scss
+++ b/app/assets/stylesheets/pageflow/progress_navigation_bar/cross_dependant_styles.css.scss
@@ -16,8 +16,10 @@ body .widget_progress_navigation_bar_present .navigation_mobile {
   }
 }
 
-.navigation_mobile, .navigation_mobile > * {
-  body.has_mobile_platform .widget_progress_navigation_bar_present & {
+body.has_mobile_platform .widget_progress_navigation_bar_present,
+body.has_mobile_platform .widget_progress_navigation_bar_horizontal_present {
+  .navigation_mobile,
+  .navigation_mobile > * {
     display: block;
   }
 }
