--- a/app/assets/stylesheets/pageflow/progress_navigation_bar/themes/default/widget_margin.scss
+++ b/app/assets/stylesheets/pageflow/progress_navigation_bar/themes/default/widget_margin.scss
@@ -1,25 +1,23 @@
 @include pageflow-widget-margin("progress_navigation_bar", "right") {
-  @include desktop {
-    margin-right: 30px;
-  }
+  margin-right: 30px;
 
-  @include pad_portrait {
+  @include pageflow-progress-mobile-variant {
     margin-right: 0;
   }
 }
 
 @include pageflow-widget-margin("progress_navigation_bar", "right_max") {
-  @include desktop {
-    margin-right: 120px;
-  }
+  margin-right: 120px;
 
-  @include pad_portrait {
+  @include pageflow-progress-mobile-variant {
     margin-right: 0;
   }
 }
 
 @include pageflow-widget-margin("progress_navigation_bar_horizontal", "top") {
-  @include desktop {
-    margin-top: 30px;
+  margin-top: 30px;
+
+  @include pageflow-progress-mobile-variant {
+    margin-top: 0;
   }
 }
